srcs/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: my-wp
        imagePullPolicy: Never
        ports:
        - containerPort: 5050
