srcs/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: my-grafana
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
  apiVersion: v1
  kind: Service
  metadata:
      name: grafana-service
  spec:
      type: ClusterIP
      ports:
      - name: grafana
        port: 3000
        targetPort: 3000
      selector:
          app: grafana-service
