srcs/nginx_ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssh
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: ssh
      port: 30022
      nodePort: 30022
      protocol: TCP
